Somewhat working parallax for title and main photo. Need to add more photos and fix spacing

--- a/src/styles/components/NavBar.css
+++ b/src/styles/components/NavBar.css
@@ -1,9 +1,9 @@
 .navbar {
     overflow: hidden;
-    position: fixed;
+    position: sticky;
     top: 0;
-    left: 0;
-    right: 0;
+    /*left: 0;
+    right: 0;*/
     height: 5VH;
     background-color: #f1f1f1;
     padding: 10px 50px;
